@@ -1,9 +1,9 @@
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/AUTHORS,v 1.2 2002-08-31 17:15:02 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/AUTHORS,v 1.3 2003-04-24 12:24:25 merunka Exp $
 
 Authors of jnettop
 
 Jakub Skopal:
-	entire files -> jnettop.c, jresolv.c, jnettop.h
+	entire files -> jnettop.c, jresolv.c, jnettop.h, jfilter.c
 
 
